# wave

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
assets/shaders/: basic.frag  basic.vert  phong.frag  phong.vert
cmake/: set_precompiled_header.cmake
editor/: CMakeLists.txt  app.cpp  app.h  editor_app.cpp  editor_app.h  editor_main.cpp  main.cpp
editor/pch/: editorpch.cpp
engine/: CMakeLists.txt  engine.cpp  engine.h  subsystem.h
engine/app/: app.cpp  app.h
engine/event/: event.h  event_handler.h
engine/imgui/: imgui_context.cpp
engine/include/: wave.h
engine/pch/: wavepch.h
engine/scene/light/: light.h
engine/scene/mesh/: mesh.cpp  mesh.h  vertex_buffer.h
engine/scene/model/: model.cpp  model.h
engine/scene/object/: object.cpp
engine/scene/shader/: shader.cpp  shader.h
engine/scene/texture/: texture_manager.cpp  texture_manager.h
engine/util/: result.h  singleton.h  util.h
engine/util/locator/: locator.h
engine/util/logger/: logger.cpp  logger.h
engine/window/: window.cpp  window.h  window_params.h
sandbox/: CMakeLists.txt  app.cpp  app.h  main.cpp
sandbox/app/: app.cpp  app.h
sandbox/assets/shaders/: basic.frag  basic.vert
sandbox/include/: app.h
sandbox/main/: main.cpp
sandbox/pch/: sandboxpch.cpp  sandboxpch.h
sandbox/src/: app.cpp  main.cpp  sandboxpch.cpp
src/: CMakeLists.txt
src/asset/shader/: shader.cpp  shader.h  shader_manager.h
src/asset/texture/: texture.h  texture_manager.cpp
src/buffer/: vertex_buffer.cpp  vertex_buffer.h
src/engine/: engine.cpp  engine.h
src/entity/camera/: camera.cpp  camera.h
src/entity/light/: light.h
src/entity/object/: object.cpp  object.h
src/event/: event_handler.cpp  event_handler.h
src/include/: wave.h
src/pch/: wavepch.h
src/scene/camera/: camera.cpp  camera.h
src/scene/light/: light.cpp  light.h
src/scene/mesh/: mesh.cpp  mesh.h  vertex.h  vertex_buffer.cpp  vertex_buffer.h
src/scene/object/: object.cpp  object.h
src/scene/shader/: shader.cpp  shader.h  shader_manager.cpp
src/scene/texture/: texture.h  texture_manager.cpp  texture_manager.h
src/util/: singleton.h  util.h
src/window/: window.h  window_glfw.cpp  window_glfw.h
wave/: CMakeLists.txt
wave/asset/shader/: shader.cpp  shader_manager.h
wave/asset/texture/: texture.h  texture_manager.cpp  texture_manager.h
wave/assets/shader/: shader.cpp  shader.h
wave/assets/texture/: texture.h  texture_manager.cpp  texture_manager.h
wave/buffer/: vertex_buffer.cpp  vertex_buffer.h
wave/camera/: camera.cpp  camera.h
wave/context/: imgui_context.cpp  imgui_context.h
wave/entity/camera/: camera.cpp  camera.h
wave/entity/light/: light.cpp  light.h
wave/entity/mesh/: cube.h
wave/entity/object/: object.cpp  object.h
wave/event/: event.h  event_handler.cpp  event_handler.h
wave/events/: input.cpp  input.h
wave/include/: camera.h  imgui_context.h  input.h  log.h  opengl_buffers.h  opengl_texture.h  shader.h  texture.h  util.h  wave.h  wavepch.h  window.h  window_glfw.h
wave/pch/: wavepch.h
wave/src/: camera.cpp  imgui_context.cpp  input.cpp  log.cpp  opengl_buffers.cpp  opengl_texture.cpp  shader.cpp  texture.cpp  wavepch.cpp  window_glfw.cpp
wave/util/: log.cpp  util.h
wave/window/: window.h  window_glfw.cpp  window_glfw.h
